# routes/index.js
@@ -8,8 +8,8 @@ router.use("/contacts", require("./contacts"))
 // router.use("/api-docs",  require('./swagger'))
 
 
-// router.use('/api-docs', swaggerUi.serve);
-// router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.use('/', swaggerUi.serve);
+router.get('/', swaggerUi.setup(swaggerDocument));
 
 
 module.exports = router;
